added fly, and settings
